--- a/ExchangeKernel/ExchangeKernel.csproj
+++ b/ExchangeKernel/ExchangeKernel.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LIB.cs" />
     <Compile Include="Exchange.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="MyTuple.cs" />
